--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=todolist
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.favor-parameter=false
+spring.web.resources.add-mappings=true
