--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.application.name=todolist
 spring.mvc.contentnegotiation.favor-path-extension=false
 spring.mvc.contentnegotiation.favor-parameter=false
 spring.web.resources.add-mappings=true
+
+spring.datasource.url=jdbc:h2:file:./data/todolist
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.open-in-view=false
